[gd_scene load_steps=21 format=3 uid="uid://bxf608ot7abq6"]

[ext_resource type="Script" path="res://MainServer.gd" id="1_qagmq"]
[ext_resource type="PackedScene" uid="uid://dw7rbq4dqp4tx" path="res://PlayerScene.tscn" id="2_2bck6"]
[ext_resource type="PackedScene" uid="uid://c1kclfbacb1yf" path="res://Level1.blend" id="3_ksotx"]
[ext_resource type="PackedScene" uid="uid://vafjnrbk4yb5" path="res://FireBall.tscn" id="3_pdmax"]
[ext_resource type="PackedScene" uid="uid://caioeaq0hu2vf" path="res://Console.tscn" id="4_064wq"]
[ext_resource type="PackedScene" uid="uid://bdjh31gyjqnie" path="res://CharacterCreator/CharacterCreation.tscn" id="4_utgk3"]
[ext_resource type="Resource" path="res://Characters/Default.tres" id="4_yj4kb"]
[ext_resource type="Theme" uid="uid://3lpcmlrjk4do" path="res://CharacterCreator/new_theme.tres" id="5_4fqgf"]
[ext_resource type="Resource" path="res://Characters/Curious George.tres" id="5_d7fda"]
[ext_resource type="Resource" path="res://Characters/Kim Jong Un.tres" id="6_kndtd"]
[ext_resource type="Resource" path="res://Characters/Mario.tres" id="7_hv8qo"]
[ext_resource type="Resource" path="res://Characters/The Queen.tres" id="8_d0ui0"]
[ext_resource type="Resource" path="res://Characters/Me.tres" id="9_63bqd"]
[ext_resource type="Resource" uid="uid://dib8ux3bxcjo4" path="res://Characters/Minion.tres" id="10_ugy6y"]
[ext_resource type="Resource" path="res://Characters/Yellow Guy.tres" id="11_4cnbr"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_usv2v"]
sky_top_color = Color(0.294118, 0.482353, 0.537255, 1)
sky_horizon_color = Color(0.682353, 0.65098, 0.607843, 1)
sky_curve = 0.172305
ground_bottom_color = Color(0.0156863, 0.0509804, 0.113725, 1)
ground_horizon_color = Color(0.717647, 0.631373, 0.615686, 1)
ground_curve = 0.101965

[sub_resource type="Sky" id="Sky_t5lr5"]
sky_material = SubResource("ProceduralSkyMaterial_usv2v")

[sub_resource type="Environment" id="Environment_1e3y5"]
background_mode = 2
sky = SubResource("Sky_t5lr5")
tonemap_mode = 2
ssao_enabled = true
sdfgi_enabled = true
glow_enabled = true

[sub_resource type="SystemFont" id="SystemFont_pcexh"]

[sub_resource type="LabelSettings" id="LabelSettings_xw10x"]
line_spacing = 9.985
font = SubResource("SystemFont_pcexh")
font_size = 26
outline_size = 20
outline_color = Color(0.243137, 0.478431, 0.415686, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_qagmq")
player_scene = ExtResource("2_2bck6")
projectile = ExtResource("3_pdmax")
defaultCharacters = Array[Resource]([ExtResource("4_yj4kb"), ExtResource("5_d7fda"), ExtResource("6_kndtd"), ExtResource("7_hv8qo"), ExtResource("8_d0ui0"), ExtResource("9_63bqd"), ExtResource("10_ugy6y"), ExtResource("11_4cnbr")])

[node name="Console" parent="." instance=ExtResource("4_064wq")]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1e3y5")

[node name="CharacterCreation" parent="." instance=ExtResource("4_utgk3")]
visible = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="MainMenu" type="CanvasLayer" parent="."]
layer = 0

[node name="Panel" type="Panel" parent="MainMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_4fqgf")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -457.5
offset_top = -113.0
offset_right = 457.5
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="Name" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MainMenu/VBoxContainer/Name"]
layout_mode = 2
text = "UserName"

[node name="NameText" type="LineEdit" parent="MainMenu/VBoxContainer/Name"]
custom_minimum_size = Vector2(192.5, 0)
layout_mode = 2
text = "Player"
alignment = 2
expand_to_text_length = true

[node name="IPBOX" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MainMenu/VBoxContainer/IPBOX"]
layout_mode = 2
text = "IP"

[node name="LineEdit" type="LineEdit" parent="MainMenu/VBoxContainer/IPBOX"]
custom_minimum_size = Vector2(192.5, 0)
layout_mode = 2
text = "127.0.0.1"
alignment = 2
expand_to_text_length = true

[node name="Connect" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Connect
"

[node name="Host" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Host
"

[node name="ReferenceRect" type="ReferenceRect" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 59.67)
layout_mode = 2

[node name="Character NEW" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/VBoxContainer/Character NEW"]
layout_mode = 2
text = "Characters"

[node name="ReferenceRect" type="ReferenceRect" parent="MainMenu/VBoxContainer/Character NEW"]
custom_minimum_size = Vector2(298.56, 0)
layout_mode = 2

[node name="LineEditCharName" type="LineEdit" parent="MainMenu/VBoxContainer/Character NEW"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Character Name"
alignment = 2

[node name="Button" type="Button" parent="MainMenu/VBoxContainer/Character NEW"]
layout_mode = 2
size_flags_horizontal = 8
text = "Create New Character"

[node name="ItemList" type="ItemList" parent="MainMenu/VBoxContainer"]
layout_mode = 2
auto_height = true

[node name="Label" type="Label" parent="MainMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -162.5
offset_right = 162.5
offset_bottom = 134.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Super Smash Your Bros"
label_settings = SubResource("LabelSettings_xw10x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://PlayerScene.tscn", "res://FireBall.tscn")
spawn_path = NodePath("..")

[node name="SpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.9379, 0)

[node name="Level1" parent="." instance=ExtResource("3_ksotx")]
transform = Transform3D(0.461994, 0, 0, 0, 0.461994, 0, 0, 0, 0.461994, 0, -6.79453, 0)

[connection signal="pressed" from="MainMenu/VBoxContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="button_up" from="MainMenu/VBoxContainer/Character NEW/Button" to="." method="_on_button_button_up"]
[connection signal="item_clicked" from="MainMenu/VBoxContainer/ItemList" to="." method="_on_item_list_item_clicked"]
